css/map.css
/* ... */
path.fill.tag-landuse-landfill {
    stroke: rgba(255, 153, 51, 0.2);
    fill: rgba(255, 153, 51, 0.2);
}
.preset-icon-fill-area.tag-landuse-landfill {
    border-color: rgb(255, 153, 51);
    background-color: rgba(255, 153, 51, 0.2);
}

.pattern-color-construction {
    fill: rgba(196, 189, 25, 0.2);
}
path.stroke.tag-landuse-construction {
    stroke: rgb(196, 189, 25);
}
.preset-icon-fill-area.tag-landuse-construction {
    border-color: rgb(196, 189, 25);
    background-color: rgba(196, 189, 25, 0.2);
}

path.stroke.tag-landuse-military {
    stroke: rgb(214, 136, 26);
}
path.fill.tag-landuse-military {
    stroke: rgba(214, 136, 26, 0.2);
    fill: rgba(214, 136, 26, 0.2);
}
.preset-icon-fill-area.tag-landuse-military {
    border-color: rgb(214, 136, 26);
    background-color: rgba(214, 136, 26, 0.2);
}

.pattern-color-wetland {
    fill: rgba(182, 225, 153, 0.2);
}
path.stroke.tag-natural-wetland {
    stroke: rgb(182, 225, 153);
}
.preset-icon-fill-area.tag-natural-wetland {
    border-color: rgb(182, 225, 153);
    background-color: rgba(182, 225, 153, 0.2);
}

.pattern-color-meadow {
    fill: rgba(182, 225, 153, 0.2);
}
path.stroke.tag-landuse-meadow {
    stroke: rgb(182, 225, 153);
}
.preset-icon-fill-area.tag-landuse-meadow {
    border-color: rgb(182, 225, 153);
    background-color: rgba(182, 225, 153, 0.2);
}

.pattern-color-beach {
    fill: rgba(255, 255, 126, 0.2);
}
path.stroke.tag-natural-beach {
    stroke: rgb(255, 255, 126);
}
.preset-icon-fill-area.tag-natural-beach {
    border-color: rgb(255, 255, 126);
    background-color: rgba(255, 255, 126, 0.2);
}

.pattern-color-scrub {
    fill: rgba(219, 240, 139, 0.2);
}
path.stroke.tag-natural-scrub {
    stroke: rgb(219, 240, 139);
}
.preset-icon-fill-area.tag-natural-scrub {
    border-color: rgb(219, 240, 139);
    background-color: rgba(219, 240, 139, 0.2);
}

.pattern-color-farm,
.pattern-color-farmland {
    fill: rgba(140, 208, 95, 0.2);
}
path.stroke.tag-landuse-farm,
path.stroke.tag-landuse-farmland {
    stroke: rgb(140, 208, 95);
}
.preset-icon-fill-area.tag-landuse-farm,
.preset-icon-fill-area.tag-landuse-farmland {
    background-color: rgba(140, 208, 95, 0.2);
}

.pattern-color-cemetery,
.pattern-color-orchard {
    fill: rgba(140, 208, 95, 0.2);
}
path.stroke.tag-landuse-cemetery,
path.stroke.tag-landuse-orchard {
    stroke: rgb(140, 208, 95);
}
.preset-icon-fill-area.tag-landuse-cemetery,
.preset-icon-fill-area.tag-landuse-orchard {
    background-color: rgba(140, 208, 95, 0.2);
}

path.stroke.tag-amenity-parking {
    stroke: rgb(170, 170, 170);
}
path.fill.tag-amenity-parking {
    stroke: rgba(170, 170, 170, 0.3);
    fill: rgba(170, 170, 170, 0.3);
}
.preset-icon-fill-area.tag-amenity-parking {
    border-color: rgb(170, 170, 170);
    background-color: rgba(170, 170, 170, 0.3);
}

path.fill.tag-place,
path.fill.tag-boundary {
    fill: none;
}

/* highways */

path.shadow.tag-highway {
    stroke-width:16;
}
path.casing.tag-highway {
    stroke:#444;
    stroke-width:10;
}
path.stroke.tag-highway {
    stroke:#ccc;
    stroke-width:8;
}

.low-zoom path.shadow.tag-highway {
    stroke-width:12;
}
.low-zoom path.casing.tag-highway {
    stroke-width:6;
}
.low-zoom path.stroke.tag-highway {
    stroke-width:4;
}

path.stroke.tag-highway-motorway,
path.stroke.tag-highway-motorway_link,
path.stroke.tag-construction-motorway {
    stroke:#58a9ed;
}

path.casing.tag-highway-motorway,
path.casing.tag-highway-motorway_link,
path.casing.tag-construction-motorway {
    stroke:#2c5476;
}

path.stroke.tag-highway-trunk,
path.stroke.tag-highway-trunk_link,
path.stroke.tag-construction-trunk {
    stroke:#8cd05f;
}
path.casing.tag-highway-trunk,
path.casing.tag-highway-trunk_link,
path.casing.tag-construction-trunk {
    stroke:#46682f;
}

path.stroke.tag-highway-primary,
path.stroke.tag-highway-primary_link,
path.stroke.tag-construction-primary {
    stroke:#e06d5f;
}
path.casing.tag-highway-primary,
path.casing.tag-highway-primary_link,
path.casing.tag-construction-primary {
    stroke:#70372f;
}

path.stroke.tag-highway-secondary,
path.stroke.tag-highway-secondary_link,
path.stroke.tag-construction-secondary {
    stroke:#eab056;
}
path.casing.tag-highway-secondary,
path.casing.tag-highway-secondary_link,
path.casing.tag-construction-secondary {
    stroke:#75582b;
}

path.stroke.tag-highway-tertiary,
path.stroke.tag-highway-tertiary_link,
path.stroke.tag-construction-tertiary {
    stroke:#ffff7e;
}
path.casing.tag-highway-tertiary,
path.casing.tag-highway-tertiary_link,
path.casing.tag-construction-tertiary {
    stroke:#7f7f3f;
}

path.stroke.tag-highway-unclassified,
path.stroke.tag-construction-unclassified {
    stroke:#eaeaea;
}
path.casing.tag-highway-unclassified,
path.casing.tag-construction-unclassified {
    stroke:#444;
}

path.stroke.tag-highway-residential,
path.stroke.tag-construction-residential {
    stroke:#fff;
}
path.casing.tag-highway-residential,
path.casing.tag-construction-residential {
    stroke:#444;
}

path.stroke.tag-highway-living_street {
    stroke:#ccc;
    stroke-width:4;
}
path.casing.tag-highway-living_street {
    stroke:#fff;
    stroke-width:6;
}

path.stroke.line.tag-highway-pedestrian {
    stroke:#fff;
    stroke-dasharray: 2, 8;
    stroke-width:4;
    shapeRendering: auto;
}
path.casing.line.tag-highway-pedestrian {
    stroke:#8cd05f;
    stroke-width:6;
}
path.stroke.area.tag-highway-pedestrian {
    stroke:#fff;
    stroke-width: 2;
}

path.stroke.tag-highway-service {
    stroke:#fff;
    stroke-width:4;
}
path.casing.tag-highway-service {
    stroke:#666;
    stroke-width:6;
}
.low-zoom path.stroke.tag-highway-service {
    stroke-width:2;
}
.low-zoom path.casing.tag-highway-service {
    stroke-width:4;
}

path.stroke.tag-highway-track {
    stroke: #fff;
    stroke-width: 4;
}
path.casing.tag-highway-track {
    stroke: #996600;
    stroke-width: 6;
    stroke-linecap: butt;
    stroke-dasharray: 6, 6;
}
/* ... */

